--- a/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_s3/tasks/main.yaml
+++ b/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_s3/tasks/main.yaml
@@ -10,11 +10,23 @@
     state: directory
     path: '{{ nccl_download_dir }}'
 
-- name: Configure AWS CLI for {{ s3_profile }}
-  shell: |
-    aws configure set aws_access_key_id '{{ s3_access_key }}' --profile '{{ s3_profile }}'
-    aws configure set aws_secret_access_key '{{ s3_secret_access_key }}' --profile '{{ s3_profile }}'
-    aws configure set region '{{ s3_region }}' --profile '{{ s3_profile }}'
+- name: Configure AWS CLI for {{ s3_profile }} by setting {{ topdir }}/.aws/credentials
+  blockinfile:
+    path: '{{ home_dir }}/.aws/credentials'
+    block: |
+      [{{ s3_profile }}]
+      aws_access_key_id = {{ s3_access_key }}
+      aws_secret_access_key = {{ s3_secret_access_key }}
+  when: s3_add_credentials == 'yes'
+
+- name: Configure AWS CLI for {{ s3_profile }} by setting {{ topdir }}/.aws/config
+  blockinfile:
+    path: '{{ home_dir }}/.aws/config'
+    block: |
+      [profile {{ s3_profile }}]
+      region = {{ s3_region }}
+      output = text
+  when: s3_add_credentials == 'yes'
 
 - name: Download S3 bucket NCCL tarball
   shell: "AWS_DEFAULT_PROFILE={{ s3_profile }} aws s3 cp {{ s3_bucket }} {{ nccl_download_dir }}"
@@ -57,8 +69,14 @@
     state: absent
     path: '{{ nccl_download_dir }}'
 
-- name: Optional --> delete aws '{{ aws_profile }}' credentials.
+- name: Optional --> delete AWS '{{ s3_profile }}' entry in {{ home_dir }}/.aws/credentials
   replace:
     path: ~/.aws/credentials
-    regexp: '\[{{ aws_profile }}\]\naws_access_key={{ aws_access_key }}\naws_secret_access_key={{ aws_secret_access_key}}'
-  when: delete_aws_credentials == 'yes'
+    regexp: '\[{{ s3_profile }}\]\naws_access_key = {{ s3_access_key }}\naws_secret_access_key = {{ s3_secret_access_key}}'
+  when: delete_aws_entry == 'yes'
+
+- name: Optional --> delete AWS '{{ s3_profile }}' entry in {{ home_dir }}/.aws/config
+  replace:
+    path: ~/.aws/config
+    regexp: '\[profile {{ s3_profile }}\]\nregion = {{ s3_region }}\noutput = text'
+  when: delete_aws_entry == 'yes'
