--- a/TensorFlow/OpenShift/templates/nfd/instance/buildconfig/s2i/rhel8/tensorflow-fftw-buildconfig-gpu-s2i-aws.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instance/buildconfig/s2i/rhel8/tensorflow-fftw-buildconfig-gpu-s2i-aws.yaml
@@ -3,13 +3,13 @@ kind: "Template"
 metadata:
   annotations:
     description: "Template to make a TensorFlow build image with an FFTW NumPy backend using RHEL 7"
-    tags: "tensorflow-fftw-s2i-build-gpu-ubi"
-  name: "tensorflow-fftw-s2i-build-gpu-ubi"
+    tags: "tensorflow-fftw-s2i-build-gpu"
+  name: "tensorflow-fftw-s2i-build-gpu"
 objects:
 - apiVersion: "v1"
   kind: "BuildConfig"
   metadata:
-    name: "tensorflow-fftw-s2i-build-gpu-ubi" 
+    name: "tensorflow-fftw-s2i-build-gpu" 
   spec:
     runPolicy: "Serial" 
     triggers: 
@@ -35,26 +35,31 @@ objects:
           - name: "PYTHON_EXECUTABLE"
             value: "${PYTHON_EXECUTABLE}"
           - name: "NCCL"
-            value: "${NCCL}"
+            value: "${NCCL_URL}"
           - name: "CUDNN"
-            value: "${CUDNN}"
+            value: "${CUDNN_URL}"
           - name: "TENSORRT"
-            value: "${TENSORRT}"
+            value: "${TENSORRT_URL}"
           - name: "AWS_PROFILE"
-            value: ""
+            valueFrom:
+              secretKeyRef:
+                name: "aws-config"
+                key: "aws_profile"
           - name: "AWS_REGION"
-            value: ""
+            valueFrom:
+              secretKeyRef:
+                name: "aws-config"
+                key: "aws_region"
           - name: "AWS_ACCESS_KEY"
-            value: ""
+            valueFrom:
+              secretKeyRef:
+                name: "aws-credentials"
+                key: "aws_access_key"
           - name: "AWS_SECRET_ACCESS_KEY"
-            value: ""
-        volumeMounts:
-        - mountPath: "/mnt/nvidia_ebs"
-          name: "nvidia-packages-pv"
-    volumes:
-    - name: "nvidia-packages-pv"
-      persistentVolumeClaim:
-        claimName: "nvidia-packages-pvc"
+            valueFrom:
+              secretKeyRef:
+                name: "aws-credentials"
+                key: "aws_secret_access_key"
     output: 
       to:
         kind: "ImageStreamTag"
@@ -96,25 +101,40 @@ parameters:
   from: '[0-9]{5}'
   value: ""
   required: false
+- description: "Which source? s3 bucket or url"
+  name: "WHICH_SOURCE"
+  value: "url"
+  required: true
 - description: "Path to Python executable"
   name: "PYTHON_EXECUTABLE"
   value: "/usr/bin/python3"
   required: true
+- description: "URL or s3 bucket to download NCCL from"
+  name: "NCCL_URL"
+  required: false
+  value: ""
+- description: "URL or s3 bucket to download cuDNN from"
+  name: "CUDNN_URL"
+  required: false
+  value: ""
+- description: "URL or s3 bucket to download TensorRT from"
+  name: "TENSORRT_URL"
+  required: false
+  value: ""
 - description: "Path to gcc"
   name: "CC"
   value: "/usr/bin/gcc"
   required: true
-- description: "s3 bucket or url to TensorRT"
-  name: "TENSORRT"
+- description: "AWS profile name"
+  name: "AWS_PROFILE"
   required: false
-- description: "s3 bucket or url to NCCL"
-  name: "NCCL"
+- description: "AWS access key"
+  name: "AWS_ACCESS_KEY"
   required: false
-- description: "s3 bucket or url to cuDNN"
-  name: "CUDNN"
+- description: "AWS secret access key"
+  name: "AWS_SECRET_ACCESS_KEY"
   required: false
-- description: "Which source for NCCL, cuDNN and/or TensorRT?"
-  name: "WHICH_SOURCE"
-  required: true
-  value: "s3"
-  from: '[A-Z]{4}'
+- description: "AWS region"
+  name: "AWS_REGION"
+  required: false
+
