Wildcard was not being processed properly. Fixing.

--- a/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_s3/tasks/main.yaml
+++ b/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_s3/tasks/main.yaml
@@ -62,7 +62,7 @@
     path: '{{ nccl_agnostic_install_path }}'
 
 - name: Move /tmp/nccl contents to {{ nccl_agnostic_install_path }}
-  shell:  mv '{{ nccl_download_dir }}/*' '{{ nccl_agnostic_install_path }}'
+  shell:  'mv {{ nccl_download_dir }}/* {{ nccl_agnostic_install_path }}'
 
 - name: Delete NCCL download dir because we don't need it anymore
   file:
