--- a/TensorFlow/playbooks/cudnn_installation/play.yaml
+++ b/TensorFlow/playbooks/cudnn_installation/play.yaml
@@ -41,7 +41,7 @@
     s3_access_key: '{{ aws_access_key | default("null") }}'
     s3_secret_access_key: '{{ aws_secret_access_key | default("null") }}'
     s3_region: '{{ aws_region | default ("us-east-1") }}'
-    delete_s3_entry: '{{ delete_aws_credentials_after_installation | default("no") }}'
+    delete_aws_entry: '{{ delete_aws_credentials_after_installation | default("no") }}'
 
   ################################################################################################
   #        The following roles will be executed and will call other roles in the process         #
