--- a/TensorFlow/playbooks/tensorrt_installation/play.yaml
+++ b/TensorFlow/playbooks/tensorrt_installation/play.yaml
@@ -38,7 +38,7 @@
     
     # AWS s3 optional params
     s3_add_credentials: '{{ add_aws_credentials | default("no") }}'
-    delete_s3_entry: '{{ delete_aws_credentials_after_installation | default("no") }}'
+    delete_aws_entry: '{{ delete_aws_credentials_after_installation | default("no") }}'
     s3_access_key: '{{ aws_access_key | default("null") }}'
     s3_secret_access_key: '{{ aws_secret_access_key | default("null") }}'
     s3_region: '{{ aws_region | default ("us-east-1") }}'
