--- a/TensorFlow/playbooks/nccl_installation/play.yaml
+++ b/TensorFlow/playbooks/nccl_installation/play.yaml
@@ -36,7 +36,7 @@
     s3_region: '{{ aws_region | default ("us-east-1") }}'
     s3_profile: '{{ aws_profile | default("null") }}'
     s3_bucket: '{{ bucket | default("null") }}'
-    delete_s3_entry: '{{ delete_aws_credentials_after_installation | default("no") }}'
+    delete_aws_entry: '{{ delete_aws_credentials_after_installation | default("no") }}'
 
     # CUDA version
     cuda_version: '{{ cuda_ver | default("10.1") }}'
