Adding in missing '{' characters for the environment vars

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
@@ -202,7 +202,7 @@
     TF_CUDNN_VERSION: '{{ cudnn_version.stdout }}'
     TF_DOWNLOAD_CLANG: '0'
     TF_ENABLE_XLA: '0'
-    TF_NCCL_VERSION: '{{ nccl_major_version.stdout }}.{ nccl_minor_version.stdout }}.{{ nccl_patch.stdout }}'
+    TF_NCCL_VERSION: '{{ nccl_major_version.stdout }}.{{ nccl_minor_version.stdout }}.{{ nccl_patch.stdout }}'
     TF_NEED_COMPUTECPP: '0'
     TF_NEED_CUDA: '1'
     TF_NEED_MPI: '0'
@@ -233,7 +233,7 @@
     TF_TENSORRT_VERSION: '{{ tensorrt_version.stdout }}'
     TF_DOWNLOAD_CLANG: '0'
     TF_ENABLE_XLA: '0'
-    TF_NCCL_VERSION: '{{ nccl_major_version.stdout }}.{ nccl_minor_version.stdout }}.{{ nccl_patch.stdout }}'
+    TF_NCCL_VERSION: '{{ nccl_major_version.stdout }}.{{ nccl_minor_version.stdout }}.{{ nccl_patch.stdout }}'
     TF_NEED_COMPUTECPP: '0'
     TF_NEED_CUDA: '1'
     TF_NEED_MPI: '0'
