Playbook was not finding the graphsurgeon and uff wheel files because there was no '36' in the .whl file name. Fixing.

--- a/TensorFlow/playbooks/tensorrt_installation/roles/install/tasks/main.yaml
+++ b/TensorFlow/playbooks/tensorrt_installation/roles/install/tasks/main.yaml
@@ -27,14 +27,14 @@
 - name: Get UFF wheel file name
   find:
     paths: '{{ tensorrt_download_dir }}/uff'
-    patterns: '*36*.whl'
+    patterns: '*.whl'
   register: uff_wheel_file
 
 # Do the same for graphsurgeon as well
 - name: Get graphsurgeon wheel file name
   find:
     paths: '{{ tensorrt_download_dir }}/graphsurgeon'
-    patterns: '*36*.whl'
+    patterns: '*.whl'
   register: graphsurgeon_wheel_file
 
 # Print out wheel files
