--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_ubi7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_ubi7_cuda10
@@ -129,6 +129,9 @@ RUN chmod -R 777 /usr/libexec/s2i && \
     pip3 install awscli && \
     rm -rf /var/cache/yum/*
 
+# Copy CUBLAS files to work around TensorFlow 'cublas_api.h' error
+RUN cp /usr/include/cublas* /usr/local/cuda/include
+
 # Set work directory
 WORKDIR ${APPDIR}
 
