--- a/TensorFlow/OpenShift/templates/nfd/instance/buildconfig/s2i/ubi7/tensorflow-fftw-buildconfig-gpu-s2i-aws.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instance/buildconfig/s2i/ubi7/tensorflow-fftw-buildconfig-gpu-s2i-aws.yaml
@@ -71,7 +71,7 @@ objects:
 - apiVersion: "v1"
   kind: "ImageStream"
   metadata:
-    name: "${OUTPUT_IMAGESTREAM}"
+    name: "${OUTPUT_IMAGESTREAM}:latest"
     namespace: "openshift-image-registry"
   spec:
     dockerImageRepository: "${REGISTRY}/openshift-image-registry"
