--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.kubernetes_ubi7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.kubernetes_ubi7_cuda10
@@ -4,17 +4,6 @@ ENV LANG=en_US.utf8
 USER root
 ENV BUILDER_VERSION 1.0
 
-# Set AWS args
-ARG AWS_ACCESS_KEY=null
-ARG AWS_SECRET_ACCESS_KEY=null
-ARG AWS_REGION=null
-ARG AWS_PROFILE=null
-
-# Set CUDA args
-ARG NCCL=null
-ARG CUDNN=null
-ARG TENSORRT=null
-
 # Python version
 ENV PYTHON_VERSION=3.6.9
 
@@ -88,6 +77,7 @@ COPY TensorFlow/playbooks/cudnn_installation ${CUDNN_INSTALLATION}
 COPY TensorFlow/playbooks/tensorrt_installation ${TENSORRT_INSTALLATION}
 COPY helper_scripts/Python/install_python_from_source.sh ${SCRIPTS_DIR}
 COPY helper_scripts/Ansible/install_ansible_from_source.sh ${SCRIPTS_DIR}
+COPY TensorFlow/Kubernetes/aws_env.sh ${SCRIPTS_DIR}/aws_env.sh
 
 # Create symlink for NumPy so that it can find endian.h
 RUN yum -y install glibc glibc-devel && \
@@ -124,10 +114,15 @@ RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
     PYTHONPATH=/usr/lib/python2.7 ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', use_ubi: 'yes', update_yum: 'no', ansible_python_interpreter: '/usr/bin/python2.7'}" && \
     cd ${TF_PREREQS_PLAYBOOK} && \
     PYTHONPATH=/usr/lib/python2.7 ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', use_s2i_ubi: 'yes', ansible_python_interpreter: '/usr/bin/python2.7'}" && \
-    pip3 install requests
+    pip3 install requests && \
+    rm -rf ${FFTW_PREREQS_PLAYBOOK} && \
+    rm -rf ${TF_PREREQS_PLAYBOOK}
 
 # Install CUDA packages with playbooks
-RUN pip3 install awscli && \
+RUN cd ${SCRIPTS_DIR} && \
+    chmod +x aws_env.sh && \
+    . ./aws_env.sh && \
+    pip3 install awscli && \
     mkdir ~/.aws && \
     touch ~/.aws/config && \
     touch ~/.aws/credentials && \
@@ -136,11 +131,14 @@ RUN pip3 install awscli && \
     cd ${TENSORRT_INSTALLATION} && \
     ansible-playbook -i hosts play.yaml --extra-vars="{rhel_ver: 7, install_dir: '${TENSORRT_INSTALL_PATH}', use_ebs: 'no', use_url: 'no', use_awscli: 'yes', bucket: '${TENSORRT}', add_aws_credentials: 'no',  aws_profile: '${AWS_PROFILE}', aws_region: '${AWS_REGION}', aws_access_key: '${AWS_ACCESS_KEY}', aws_secret_access_key: '${AWS_SECRET_ACCESS_KEY}', delete_aws_credentials_after_installation: 'no', cuda_install_path: '${CUDA_INSTALL_PATH}', gpu_check: 'no'}" && \
     cd ${CUDNN_INSTALLATION} && \
-    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_ver: 7, use_ebs: 'no', use_url: 'no', use_awscli: 'yes', bucket: '${CUDNN}', add_aws_credentials: 'no', aws_profile: '${AWS_PROFILE}', aws_region: '${AWS_REGION}', aws_access_key: '${AWS_ACCESS_KEY}', aws_secret_access_key: '${AWS_SECRET_ACCESS_KEY}', delete_aws_credentials_after_installation: 'yes', cuda_install_path: '${CUDA_INSTALL_PATH}', gpu_check: 'no'}"
+    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_ver: 7, use_ebs: 'no', use_url: 'no', use_awscli: 'yes', bucket: '${CUDNN}', add_aws_credentials: 'no', aws_profile: '${AWS_PROFILE}', aws_region: '${AWS_REGION}', aws_access_key: '${AWS_ACCESS_KEY}', aws_secret_access_key: '${AWS_SECRET_ACCESS_KEY}', delete_aws_credentials_after_installation: 'yes', cuda_install_path: '${CUDA_INSTALL_PATH}', gpu_check: 'no'}" && \
+    rm -rf ${SCRIPTS}
 
 # Install FFTW
 RUN cd ${FFTW_INSTALLATION} && \
-    ansible-playbook -i hosts play.yaml --extra-vars="{install_dir: '${FFTW_INSTALL_PATH}', build_dir: '${FFTW_BUILD_PATH}', rhel_version: 7, cc: '/usr/bin/gcc', s2i: 'yes'}"
+    ansible-playbook -i hosts play.yaml --extra-vars="{install_dir: '${FFTW_INSTALL_PATH}', build_dir: '${FFTW_BUILD_PATH}', rhel_version: 7, cc: '/usr/bin/gcc', s2i: 'yes'}" && \
+    cd .. && \
+    rm -rf ${FFTW_INSTALLATION}
 
 # Copy CUBLAS files to work around TensorFlow 'cublas_api.h' error
 RUN cp /usr/include/cublas* /usr/local/cuda/include
@@ -149,7 +147,9 @@ RUN cp /usr/include/cublas* /usr/local/cuda/include
 RUN cd ${TENSORFLOW_INSTALLATION} && \
     export x86_64_folder=$(ls /usr/lib | grep x86_64) && \
     export gcc_libs="/usr/lib/${x86_64_folder}" && \
-    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: 7, cc: '/usr/bin/gcc', gcc_libs: '${gcc_libs}', blas_library_dirs: '${FFTW_INSTALL_PATH}/lib', blas_include_dirs: '${FFTW_INSTALL_PATH}/include', tf_install_dir: '${TENSORFLOW_INSTALL_PATH}', device: 'gpu', nccl_install_path: '${NCCL_INSTALL_PATH}', use_tensorrt: 'yes', tensorrt_install_path: '${TENSORRT_INSTALL_PATH}', pythonpath: '/usr/local/lib/python3.6/site-packages', ansible_python_interpreter: '/usr/local/bin/python3', python_executable: '/usr/local/bin/python3', use_s2i: 'yes'}"
+    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: 7, cc: '/usr/bin/gcc', gcc_libs: '${gcc_libs}', blas_library_dirs: '${FFTW_INSTALL_PATH}/lib', blas_include_dirs: '${FFTW_INSTALL_PATH}/include', tf_install_dir: '${TENSORFLOW_INSTALL_PATH}', device: 'gpu', nccl_install_path: '${NCCL_INSTALL_PATH}', use_tensorrt: 'yes', tensorrt_install_path: '${TENSORRT_INSTALL_PATH}', pythonpath: '/usr/local/lib/python3.6/site-packages', ansible_python_interpreter: '/usr/local/bin/python3', python_executable: '/usr/local/bin/python3', use_s2i: 'yes'}" && \
+    cd .. && \
+    rm -rf ${TENSORFLOW_INSTALLATION}
 
 # Set Ansible tmp dir
 RUN chmod -R 777 ${APPDIR}
